--- a/README
+++ b/README
@@ -1,18 +1,18 @@
 This is the software that runs the BEACON station. 
-It depends on libnuphase for talking to the boards. 
+It depends on libbeacon for talking to the boards. 
 
 It consists of several programs: 
 
-nuphase-acq:   Data Acquisition (nuphase-acq.c)
-nuphase-copy:  Data copying to RadProc    (nuphase-copy.c)
-nuphase-hk:   Housekeeping  / power control daemon     (nuphase-hk.c)
-nuphase-startup: Startup process that does basically nothing in beacon. (nuphase-startup.c) 
+beacon-acq:   Data Acquisition (beacon-acq.c)
+beacon-copy:  Data copying to beacon-archive (beacon-copy.c)
+beacon-hk:   Housekeeping  / power control daemon     (beacon-hk.c)
+beacon-startup: Startup process that does basically nothing in beacon. (beacon-startup.c) 
 
 
 
 Influential environmental variables: 
 
-  NUPHASE_CONFIG_DIR : defines the directory to read config files from 
+  BEACON_CONFIG_DIR : defines the directory to read config files from 
   
 
 
